@@ -3,7 +3,7 @@ bind_addr=
 port=22122
 network_timeout=30
 base_path=/home/yuqing/fastdfs
-max_connections=1024
+max_connections=256
 
 #0: round robin
 #1: specify group
