@@ -1390,9 +1390,57 @@ data buff (struct)
 	int recv_bytes;
 	int log_level;
 	in_addr_t client_ip;
+	int server_sock;
 	
+	server_sock = (int)arg;
+
+	while (g_continue_flag)
+	{
+	if (pthread_mutex_lock(&g_tracker_thread_lock) != 0)
+	{
+		logError("file: "__FILE__", line: %d, " \
+			"call pthread_mutex_lock fail, " \
+			"errno: %d, error info:%s.", \
+			__LINE__, errno, strerror(errno));
+	}
+
+	if (!g_continue_flag)
+	{
+		pthread_mutex_unlock(&g_tracker_thread_lock);
+		break;
+	}
+
 	memset(&client_info, 0, sizeof(client_info));
-	client_info.sock = (int)arg;
+	client_info.sock = nbaccept(server_sock, 1 * 60, &result);
+	if (pthread_mutex_unlock(&g_tracker_thread_lock) != 0)
+	{
+		logError("file: "__FILE__", line: %d, " \
+			"call pthread_mutex_unlock fail, " \
+			"errno: %d, error info:%s.", \
+			__LINE__, errno, strerror(errno));
+	}
+	if(client_info.sock < 0) //error
+	{
+		if (result == ETIMEDOUT || result == EINTR || \
+			result == EAGAIN)
+		{
+			continue;
+		}
+			
+		if(result == EBADF)
+		{
+			logError("file: "__FILE__", line: %d, " \
+				"accept failed, " \
+				"errno: %d, error info: %s", \
+				__LINE__, result, strerror(result));
+			break;
+		}
+			
+		logError("file: "__FILE__", line: %d, " \
+			"accept failed, errno: %d, error info: %s", \
+			__LINE__, result, strerror(result));
+		continue;
+	}
 	
 	client_ip = getPeerIpaddr(client_info.sock, \
 				client_info.ip_addr, FDFS_IPADDR_SIZE);
@@ -1406,7 +1454,9 @@ data buff (struct)
 			logError("file: "__FILE__", line: %d, " \
 				"ip addr %s is not allowed to access", \
 				__LINE__, inet_ntoa(address));
-			goto THREAD_DONE;
+
+			close(client_info.sock);
+			continue;
 		}
 	}
 
@@ -1561,7 +1611,6 @@ data buff (struct)
 		count++;
 	}
 
-
 	if (g_continue_flag)
 	{
 		tracker_check_dirty(&client_info);
@@ -1578,7 +1627,9 @@ data buff (struct)
 		--(*(client_info.pStorage->ref_count));
 	}
 
-THREAD_DONE:
+	close(client_info.sock);
+	}
+
 	if (pthread_mutex_lock(&g_tracker_thread_lock) != 0)
 	{
 		logError("file: "__FILE__", line: %d, " \
@@ -1595,7 +1646,6 @@ THREAD_DONE:
 			__LINE__, errno, strerror(errno));
 	}
 
-	close(client_info.sock);
 	return NULL;
 }
 
